# libvpl-tools

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: CODEOWNERS
.github/workflows/: acceptance.yml  bdba.yml  cmake.yml  coverity.yml  daily-validation.yml  diff.yml  hadolint.yml  ipldt.yml  lint.yml  mcafee.yml  pr-draft.yml  pr-ready.yml  sdl.yml  setup-variables.yml  sscb.yml  summary.yml  trivy.yml
.github/workflows/coverity/: coverity.py
.github/workflows/diff/: bom_diff.py
.github/workflows/lint/: Dockerfile.ubuntu.lint
.github/workflows/sdl/: evidence_upload.py
.github/workflows/summary/: summarize_testing.py
script/: test  test.bat
script/gitlint/: custom_gitlint_rules.py
tools/cli/: CMakeLists.txt
tools/cli/system_analyzer/: CMakeLists.txt
tools/cli/val-surface-sharing/: CMakeLists.txt  README.md  val_surface_sharing_api.py
tools/cli/val-surface-sharing/src/: hw-device-d3d11.cpp  hw-device.h
tools/cli/vpl-import-export/: .clang-format  CMakeLists.txt
tools/cli/vpl-inspect/: CMakeLists.txt
tools/cli/vpl-inspect/src/: vpl-inspect.cpp
tools/legacy/: .clang-format
tools/legacy/metrics_monitor/: CMakeLists.txt
tools/legacy/sample_common/: CMakeLists.txt
tools/legacy/sample_common/include/: base_allocator.h  d3d11_device.h  d3d_device.h  gtkdata.h  gtkutils.h  hw_device.h  sample_defs.h  sample_utils.h  vaapi_device.h  vaapi_utils.h  vaapi_utils_common.h  vaapi_utils_drm.h  vaapi_utils_gtk.h  vaapi_utils_x11.h  version.h
tools/legacy/sample_common/src/: base_allocator.cpp  d3d11_allocator.cpp  d3d11_device.cpp  d3d_allocator.cpp  d3d_device.cpp  gtkutils.cpp  parameters_dumper.cpp  sample_utils.cpp  sysmem_allocator.cpp  vaapi_allocator.cpp  vaapi_device.cpp  vaapi_utils.cpp  vaapi_utils_drm.cpp  vaapi_utils_gtk.cpp  vaapi_utils_x11.cpp
tools/legacy/sample_decode/: CMakeLists.txt
tools/legacy/sample_decode/include/: pipeline_decode.h
tools/legacy/sample_decode/src/: pipeline_decode.cpp  sample_decode.cpp
tools/legacy/sample_encode/: CMakeLists.txt
tools/legacy/sample_encode/include/: pipeline_encode.h
tools/legacy/sample_encode/src/: pipeline_encode.cpp  sample_encode.cpp
tools/legacy/sample_misc/wayland/: CMakeLists.txt
tools/legacy/sample_multi_transcode/: CMakeLists.txt
tools/legacy/sample_multi_transcode/include/: smt_cli_params.h
tools/legacy/sample_multi_transcode/src/: pipeline_transcode.cpp  sample_multi_transcode.cpp  smt_cli.cpp
tools/legacy/sample_vpp/: CMakeLists.txt
tools/legacy/sample_vpp/include/: sample_vpp_config.h  sample_vpp_utils.h
tools/legacy/sample_vpp/src/: sample_vpp.cpp  sample_vpp_config.cpp  sample_vpp_frc_adv.cpp  sample_vpp_parser.cpp  sample_vpp_utils.cpp
